@@ -4,5 +4,5 @@ INCLUDES =					\
 	-I$(top_builddir) -I$(top_srcdir)	\
 	-I@srcdir@
 
-LDADD = $(top_builddir)/libxml2.la @Z_LIBS@
+LDADD = $(top_builddir)/libxml2.la @Z_LIBS@ -lm
 
